<resources>
    <string name="app_name">Udacity Hub</string>

    <string name="action_settings">Settings</string>

    <string name="title">My Udacity Apps</string>
    <string name="app_name_1">Spotify Streamer</string>
    <string name="app_name_2">Super Duo: Football Scores</string>
    <string name="app_name_3">Super Duo: Library</string>
    <string name="app_name_4">Build It Bigger</string>
    <string name="app_name_5">XYZ Reader</string>
    <string name="app_name_6">Capstone</string>
</resources>
