<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:id="@+id/titleTextView" />

    <Button
        style="@style/AppButton"
        android:text="@string/app_name_1"
        android:id="@+id/app1Button"
        android:layout_below="@+id/titleTextView"
        android:onClick="openApp" />

    <Button
        style="@style/AppButton"
        android:text="@string/app_name_2"
        android:id="@+id/app2Button"
        android:layout_below="@+id/app1Button"
        android:onClick="openApp" />

    <Button
        style="@style/AppButton"
        android:text="@string/app_name_3"
        android:id="@+id/app3Button"
        android:layout_below="@+id/app2Button"
        android:onClick="openApp" />

    <Button
        style="@style/AppButton"
        android:text="@string/app_name_4"
        android:id="@+id/app4Button"
        android:layout_below="@+id/app3Button"
        android:onClick="openApp" />

    <Button
        style="@style/AppButton"
        android:text="@string/app_name_5"
        android:id="@+id/app5Button"
        android:layout_below="@+id/app4Button"
        android:onClick="openApp" />

    <Button
        style="@style/AppButton"
        android:text="@string/app_name_6"
        android:id="@+id/app6Button"
        android:layout_below="@+id/app5Button"
        android:onClick="openApp" />

</RelativeLayout>
